# fibo

./: .env  .gitignore  compose.yml  main.go  project_export.md
.github/: copilot-instructions.md
go/: Dockerfile  go.mod  main.go
orchestrateur/: .air.toml  go.mod  go.sum
orchestrateur/cmd/server/: main.go
orchestrateur/internal/api/: routes.go
orchestrateur/internal/orchestrator/: rabbitmq.go
orchestrateur/web/: index.html
orchestrateur/web/js/: app.js  ui.js
orchestrator/: Dockerfile
orchestrator/cmd/server/: main.go
orchestrator/internal/api/: hub.go  routes.go
orchestrator/internal/api/web/: index.html
orchestrator/internal/api/web/js/: app.js  charts.js  ui.js
orchestrator/internal/orchestrator/: engine.go  rabbitmq.go  types.go
proto/: sync.proto
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
worker-go/: Dockerfile  go.mod  go.sum
worker-go/cmd/worker/: main.go
worker-go/internal/api/: router.go
worker-go/internal/worker/: engine.go  handlers.go  types.go
worker-go/proto/: sync.proto
worker-node/: Dockerfile  index.js
worker-python/: Dockerfile  main.py
worker-rust/: build.rs
