[package]
name = "fibo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# RabbitMQ client
lapin = "2.3"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Math & Utils
num-bigint = "0.4"
num-traits = "0.2"
futures-util = "0.3"
amqprs = "1.5" # Alternative possible, mais restons sur lapin pour la flexibilité
